test/foof/errors/body.foo
(do
  (do (define foo 23))
  (do (define foo 23) foo)
  (lambda ()
    (define x 5))
  (lambda ()
    (define x 5)
    x)
  (let ((x 23))
    (define y (* 2 x)))
  (let ((x 23))
    (define y (* 2 x))
    y)
  (letrec ((x 23))
    (define y (* 2 x)))
  (letrec ((x 23))
    (define y (* 2 x))
    y))
